removing some useless comments, adding some comments, fixing styling causing invisibility in profile view

--- a/asset-manager/manage/manage-profile.css
+++ b/asset-manager/manage/manage-profile.css
@@ -113,7 +113,7 @@ table {
   border: 1px solid rgba(0, 0, 0, 0.05);
   min-width: 400px;
   max-width: 800px;
-  display:table-column;
+  display: inline;
   max-height: 75vh;
 }
 
